--- a/index.html
+++ b/index.html
@@ -351,17 +351,17 @@
               <h4 class="h4 timeline-item-title">Blockchain Developer<p class="timeline-text">Sunflowee Biztech
                 </p>
               </h4>
-              <span>Aug 2022 — Now</span>
+              <span>Sep 2022 — Now</span>
               <p class="timeline-text">
                 Worked on over <b>2+</b> International projects.
-                worked over technologies like <b>Solidity</b> , <b>React js</b> , and <b>Node js</b>
+                worked over technologies <br>like <b>Solidity</b> , <b>React js</b> , and <b>Node js</b>
               </p>
             </li>
 
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Angular Developer<p class="timeline-text">Arishti Info Labs</p>
               </h4>
-              <span>Aug2021-Aug2022</span>
+              <span>Aug 2021 - Aug 2022</span>
               <p class="timeline-text">
                 Worked closely on Website Development using Angular and React js.<br>
                 Also worked on Node js for Backend.
