--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
         <section class="about-text">
           <p>
-            Hey there! I'm Mohammed, a Web and Blockchain developer with 1.5 years of experience in React JS, Angular,
-            and smart contract development. I have contributed to web3 open source projects and am available for
+            Hey there! I'm Mohammed, a <b><i>Frontend and Blockchain Developer</i></b> with 1.5 years of experience in <b><i>React JS, Angular,
+            and Smart Contract development</i></b>. I have contributed to web3 open source projects and am available for
             freelance work on all types of projects. I prioritize collaboration and communication to deliver successful
             outcomes. Let's create something amazing together!
           </p>
@@ -216,7 +216,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web Development</h4>
+                <h4 class="h4 service-item-title">Frontend Development</h4>
 
                 <p class="service-item-text">
                   Delivering professional websites with stunning UI.
@@ -319,7 +319,7 @@
             </div>
 
             <h3 class="h3">Education</h3>
-            <a style="right: 20px;position: absolute" href="./assets/pdf/Resume.pdf" target="_blank">
+            <a style="right: 20px;position: absolute" href="./assets/pdf/Mohammed Lokhandwala Resume.pdf" target="_blank">
               <button class="pdf-btn">Show Full PDF</button></a>
 
           </div>
@@ -359,11 +359,11 @@
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Angular Developer<p class="timeline-text">Arishti Info Labs</p>
+              <h4 class="h4 timeline-item-title">Frontend Developer<p class="timeline-text">Arishti Info Labs</p>
               </h4>
               <span>Aug 2021 - Aug 2022</span>
               <p class="timeline-text">
-                Worked closely on Website Development using Angular and React js.<br>
+                Worked closely on Website Development using React js and Angular.<br>
                 Also worked on Node js for Backend.
               </p>
             </li>
@@ -415,7 +415,66 @@
               </div>
 
             </li>
+            <li class="skills-item">
 
+              <div class="title-wrapper">
+                <h5 class="h5">Blockchain</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Node Js</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Web3.js</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Bootstrap</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">GitHub</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
           </ul>
 
         </section>
