--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+91 9558580469" class="contact-link">+91 9558580469</a>
+              <a href="tel:+49 15510315249" class="contact-link">+49 15510315249</a>
             </div>
 
           </li>
@@ -106,7 +106,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Ahmedabad, INDIA</address>
+              <address>Cottbus, Germany</address>
             </div>
 
           </li>
@@ -191,10 +191,11 @@
 
         <section class="about-text">
           <p>
-            Hey there! I'm Mohammed, a <b><i>Frontend and Blockchain Developer</i></b> with 1.5 years of experience in <b><i>React JS, Angular,
-            and Smart Contract development</i></b>. I have contributed to web3 open source projects and am available for
-            freelance work on all types of projects. I prioritize collaboration and communication to deliver successful
-            outcomes. Let's create something amazing together!
+            I am a <b><i>Frontend and Blockchain Developer</i></b>, currently expanding my expertise with a Master's in <b><i></i>Artificial
+            Intelligence at Brandenburgische Technische Universität</i></b> Cottbus-Senftenberg. With 1.5 years of experience in React JS,
+            Angular, and Smart Contract development, I have a proven history of contributing to web3 open source
+            projects. I am seeking freelance opportunities where I can leverage my skills to deliver high-quality,
+            collaborative solutions.
           </p>
 
         </section>
@@ -319,7 +320,8 @@
             </div>
 
             <h3 class="h3">Education</h3>
-            <a style="right: 20px;position: absolute" href="./assets/pdf/Mohammed Lokhandwala Resume.pdf" target="_blank">
+            <a style="right: 20px;position: absolute" href="./assets/pdf/Mohammed Lokhandwala CV.pdf"
+              target="_blank">
               <button class="pdf-btn">Show Full PDF</button></a>
 
           </div>
@@ -351,7 +353,7 @@
               <h4 class="h4 timeline-item-title">Blockchain Developer<p class="timeline-text">Sunflowee Biztech
                 </p>
               </h4>
-              <span>Sep 2022 — Now</span>
+              <span>Sep 2022 — Sep 2023</span>
               <p class="timeline-text">
                 Worked on over <b>2+</b> International projects.
                 worked over technologies <br>like <b>Solidity</b> , <b>React js</b> , and <b>Node js</b>
@@ -361,7 +363,7 @@
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Frontend Developer<p class="timeline-text">Arishti Info Labs</p>
               </h4>
-              <span>Aug 2021 - Aug 2022</span>
+              <span>Jan 2022 - July 2022</span>
               <p class="timeline-text">
                 Worked closely on Website Development using React js and Angular.<br>
                 Also worked on Node js for Backend.
@@ -543,7 +545,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <!-- <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://github.com/Mohammed-16/OpenBazaar" target="_blank">
 
                 <figure class="project-img">
@@ -559,10 +561,10 @@
                 <p class="project-category">Smart contract development & Frontend UI </p>
 
               </a>
-            </li>
+            </li> -->
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/Mohammed-16/UNITE3" target="_blank">
+              <a href="https://github.com/Mohammed-16/Unite-3-Hack-The-Chain" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
